# ASON-API

./: .gitignore  pyproject.toml  server.py
configs/: config.yaml
configs/model/: deeplabv3_2.yaml  deeplabv3_3.yaml  phikon_2.yaml  random_forest.yaml  random_forest_2.yaml  unet++_2.yaml  unet++_3.yaml  unet_2.yaml  unet_3.yaml  unet_basic_2.yaml  unet_basic_3.yaml
src/data/: __init__.py  dataset.py  preprocessing.py
src/models/: __init__.py  model_loader.py  phikon_segmentation.py  random_forest.py  tissue_segmentation.py  unet.py
src/pipeline/: layer_detection.py  segment.py
src/qupath/: bridge_functions.py  qupath_script.groovy
src/utils/: helpers.py  mask_creation.py  reinhard_normalizer.py
