[project]
name = "ason-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "albumentations>=2.0.8",
    "fastapi>=0.124.4",
    "hydra-core>=1.3.2",
    "numpy>=2.3.5",
    "opencv-python>=4.11.0.86",
    "ruff>=0.14.9",
    "scikit-image>=0.25.2",
    "scikit-learn>=1.8.0",
    "segmentation-models-pytorch>=0.5.0",
    "shapely>=2.0.0",
    "stardist>=0.9.2",
    "tensorflow>=2.20.0",
    "tiatoolbox>=1.3.0",
    "torch>=2.9.1",
    "uvicorn>=0.38.0",
]
